--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
 
     <script id="chat-template" type="text/template">
 
-         <div class="pull-left"><span class="text"><%- text %></span></div> <div class="pull-right time"><%- createdAt %></div>
+         <div class="pull-left"><%- username %><span class="text"><%- text %></span></div> <div class="pull-right time"><%- createdAt %></div>
 
     </script>
 
